--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "hakka-dict-toolkit",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A toolkit for https://hakka.dict.edu.tw/hakkadict/index.htm",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "Hsu Karinsu<m80126colin@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc --declaration"
+    "build": "yarn run clean & tsc",
+    "clean": "rm -rf dist"
+  },
+  "bugs": {
+    "url": "https://github.com/m80126colin/hakka-dict-toolkit/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/m80126colin/hakka-dict-toolkit.git"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
