--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,9 @@
     "module": "commonjs",
     "target": "es5",
     "noImplicitAny": false,
+    "declaration": true,
     "rootDir": "./lib",
-    "outDir": "./build/lib",
+    "outDir": "./dist",
     "watch": false
   },
   "include": [
