--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "type": "git",
     "url": "https://github.com/m80126colin/hakka-dict-toolkit.git"
   },
+  "keywords": [
+    "crawler", "hakka"
+  ],
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "lodash": "^4.17.10",
