--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "hakka"
   ],
   "dependencies": {
+    "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.2",
-    "lodash": "^4.17.10",
-    "npm": "^6.4.1",
+    "lodash": "^4.17.15",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.9",
-    "@types/lodash": "^4.14.116",
+    "@types/lodash": "^4.14.137",
     "@types/node": "^10.9.2",
     "@types/request-promise": "^4.1.42"
   }
